Imager release history.  Older releases can be found in Changes.old

Imager 0.99_02 - 21 Jul 2014
==============

 - Imager::Filter::Mandelbrot (and dynfilt/mandelbrot.c) - initialize
   the blue channel in the generated palette, and allow each color
   component to be in the range 100..255 instead of just 100..254.
   Thanks to Ralf Neubauer.
   https://rt.cpan.org/Ticket/Display.html?id=97086

 - revert "improved the XS for i_io_read() and i_io_raw_read()"
   This caused problems with older perls and didn't provide much of a
   performance improvement.

 - support Inline 0.57 and later.
   Inline 0.57 changed the "with" interface.
   https://rt.cpan.org/Ticket/Display.html?id=97108

 - don't define our own MAXINT macro, it conflicts with windows header
   files and in a few places it was the wrong value to use anyway.
   https://rt.cpan.org/Ticket/Display.html?id=96425

Imager 0.99_01 - 29 Jun 2014
==============

 - GIF: add support for giflib 5.1.0, which added error code pointer
   parameters to EGifCloseFile() and DGifCloseFile().
   https://rt.cpan.org/Ticket/Display.html?id=96756

 - GIF: avoid a double-free when do_write() fails.

 - fix SV type probing to work on perl before 5.12.  Broken in 0.99.
   https://rt.cpan.org/Ticket/Display.html?id=96761

 - PNG: skip the benign error test before libpng 1.6.0, since the
   error we're testing didn't exist before 1.6.0.
   https://rt.cpan.org/Ticket/Display.html?id=94717 (continued)

Imager 0.99 - 25 Jun 2014
===========

 - Imager::IO->new_buffer() (and hence Imager->read()'s data
   parameter) now accepts a reference to a scalar as well as just a
   plain scalar.
   https://rt.cpan.org/Ticket/Display.html?id=92785

 - Imager::IO->new_buffer() now always makes a copy of the passed in
   buffer to avoid problems with temporary objects used for the return
   value of SvPVbyte().
   https://rt.cpan.org/Ticket/Display.html?id=92785

 - improved the XS for i_io_read() and i_io_raw_read()