@@ -144,7 +144,7 @@ BEGIN {
   if ($ex_version < 5.57) {
     @ISA = qw(Exporter);
   }
-  $VERSION = '0.99_02';
+  $VERSION = '1.000';
   require XSLoader;
   XSLoader::load(Imager => $VERSION);
 }
