@@ -48,7 +48,7 @@
          }
       }
    },
-   "release_status" : "testing",
+   "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
          "web" : "http://rt.cpan.org/NoAuth/Bugs.html?Dist=Imager"
@@ -58,5 +58,5 @@
          "url" : "git://git.imager.perl.org/imager.git"
       }
    },
-   "version" : "0.99_02"
+   "version" : "1.000"
 }
